--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
     <title>TicTacFlow</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="init()">
 
-
-
-
+    <div id="container"></div>
     <script src="script.js"></script>
 </body>
 </html>
