--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TicTacFlow</title>
     <link rel="stylesheet" href="style.css">
-</head>
-<body onload="init()">
 
-    <div id="container"></div>
+    
+</head>
+
+<body onload="init()">
+    <div class="contentContainer">
+        <h1>Tic-Tac-Flow</h1>
+        <div id="container"></div>
+        <button onclick="restartGame()" class="restartButton">Restart Game</button>
+    </div>
+
     <script src="script.js"></script>
+
 </body>
+
 </html>
